--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -63,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-11", "macos-12", "macos-13"]
+        os: ["macos-12", "macos-13"]
         python-version: ["3.10"]
     steps:
     - uses: actions/checkout@v3
