--- a/.github/workflows/python-versions.yml
+++ b/.github/workflows/python-versions.yml
@@ -1,7 +1,6 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# This workflow will install various versions of Python and run non-regression tests.
 
-name: Unit tests
+name: Python versions
 
 on:
   push:
@@ -57,21 +56,3 @@ jobs:
         python -c 'import sys;print(sys.version)'
         export PYTHONPATH=$PYTHONPATH:$(pwd)
         python ./tests/test_all.py
-
-  examples:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["macos-12", "macos-13"]
-        python-version: ["3.10"]
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Non-regression tests
-      run: |
-        export PYTHONPATH=$PYTHONPATH:$(pwd)
-        zsh ./tests/examples_macos.sh
