--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  examples:
+  macos:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -26,3 +26,21 @@ jobs:
       run: |
         export PYTHONPATH=$PYTHONPATH:$(pwd)
         zsh ./tests/examples_macos.sh
+  linux:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-latest", "ubuntu-22.04", "ubuntu-20.04"]
+        python-version: ["3.10"]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Comparison with readelf
+      run: |
+        readelf --version
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
+        bash ./tests/examples_linux.sh
